; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-log-split.c_adjust_split_params.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-log-split.c_adjust_split_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@split_shift = common dso_local global i32 0, align 4
@split_quotient = common dso_local global i32 0, align 4
@split_par = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @adjust_split_params() #0 {
  %1 = load i32, i32* @split_shift, align 4
  %2 = call i32 (...) @log_cur_pos()
  %3 = ashr i32 %2, 2
  %4 = add nsw i32 %1, %3
  %5 = load i32, i32* @split_quotient, align 4
  %6 = srem i32 %4, %5
  store i32 %6, i32* @split_par, align 4
  %7 = load i32, i32* @split_par, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = load i32, i32* @split_par, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* @split_par, align 4
  br label %12

12:                                               ; preds = %9, %0
  ret void
}

declare dso_local i32 @log_cur_pos(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
